changed some things that werent updated.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             Hoxton Media
             <div class="span-size">
             <span>
-                Home
+                <a href="./index.html">Home</a>
             </span>
-            <span>
-                About Us
+            <span >
+                <a href="./about-us.html">About Us</a>
             </span>
             <span>
                 Contact US
@@ -30,8 +30,16 @@
                 POST AUTOMATICALLY TO
             </h2>
         </div>
-        <div class="buttons">
-            <a href="www.youtube.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuE54d8krphaVP1AQ1Jd4G1uRqLcA2N81TnA&usqp=CAU" alt="Youtube logo"></a>
+        <div class="banners">
+            <div class="buttons">
+                <a href="http://www.youtube.com"><img src="https://www.freeiconspng.com/uploads/youtube-logo-png-transparent-image-5.png" alt="Youtube logo"></a>
+            </div>
+            <div class="buttons">
+            <a href="http://www.instagram.com"><img src="https://www.vectorlogo.zone/logos/instagram/instagram-ar21.png" alt="Instagram logo"></a>
+            </div>
+            <div class="buttons">
+            <a href="http://www.tiktok.com"><img src="https://zipfm.net/storage/2020/09/Tik-Tok.png" alt="TikTok Logo"></a>
+        </div>
         </div>
 
         <div class="social-without">
@@ -49,8 +57,11 @@
             </p>
             <br>
             <p>
-                Subscribe now, get your first month free and savings up to 50%!
+                Subscribe now, get your first month free and savings up to <strong>50%</strong>!
             </p>
+        </div>
+        <div class="subscription-button">
+            <p><b>Subscribe Now</b></p>
         </div>
         <footer>
             <div class="h3">
